--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
     <img src='/image/pexels-ashleigh-kutryb-10491863.jpg' alt="">
     <img src='/image/pexels-yunus-tuğ-8265427.jpg' alt="">
     <img src='/image/pexels-malcolm-garret-10365585.jpg' alt="">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi temporibus veritatis fugiat accusamus rerum, ipsa at blanditiis obcaecati tempora officia. Necessitatibus soluta, minima inventore quidem architecto magni accusantium minus eius.</p>
+    <a href=https://www.google.com>Go To Google</a>
+    <a href="https://www.facebook.com">Go To Facebook</a>
 </body>
 </html>
