--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi temporibus veritatis fugiat accusamus rerum, ipsa at blanditiis obcaecati tempora officia. Necessitatibus soluta, minima inventore quidem architecto magni accusantium minus eius.</p>
     <a href=https://www.google.com>Go To Google</a>
     <a href="https://www.facebook.com">Go To Facebook</a>
+    <input type="text" name="" id="">
+    <input type="password" name="" id="">
+    <input type="submit" value="Add New file">
 </body>
 </html>
