--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <h1>This is html css projects</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda tempore voluptatem enim quidem, fugit unde sequi modi explicabo quia. Nobis iusto sapiente cum, saepe quod officia. Excepturi labore eos cum.</p>
-    <img src='/image/pexels-ashleigh-kutryb-10491863.jpg' alt="">
-    <img src='/image/pexels-yunus-tuğ-8265427.jpg' alt="">
-    <img src='/image/pexels-malcolm-garret-10365585.jpg' alt="">
+    <img src='image/im1.jpg' alt="">
+    <img src='/image/im2.jpg' alt="">
+    <img src='/image/im3.jpg' alt="">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi temporibus veritatis fugiat accusamus rerum, ipsa at blanditiis obcaecati tempora officia. Necessitatibus soluta, minima inventore quidem architecto magni accusantium minus eius.</p>
     <a href=https://www.google.com>Go To Google</a>
     <a href="https://www.facebook.com">Go To Facebook</a>
