--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>This is html css projects</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda tempore voluptatem enim quidem, fugit unde sequi modi explicabo quia. Nobis iusto sapiente cum, saepe quod officia. Excepturi labore eos cum.</p>
-    <img src='image/im1.jpg' alt="">
+    <img src='/image/im1.jpg' alt="">
     <img src='/image/im2.jpg' alt="">
     <img src='/image/im3.jpg' alt="">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi temporibus veritatis fugiat accusamus rerum, ipsa at blanditiis obcaecati tempora officia. Necessitatibus soluta, minima inventore quidem architecto magni accusantium minus eius.</p>
