--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
     <input type="text" name="" id="">
     <input type="password" name="" id="">
     <input type="submit" value="Add New file">
+    <input type="button" value="Submit">
+    <input type="date" name="" id="">
 </body>
 </html>
